--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang = "en-US">
-<head><title>Nathan's Call To Code</title><style>body{background-color:rgb(250,100,42); background-repeat:no-repeat; background-size:cover;} p{color:black;}</style><script>
+<head><title>Nathan's Call To Code</title><style>body{background-color:rgb(200,10,15); background-repeat:no-repeat; background-size:cover;} p{color:black;}</style><script>
 var joinSociety = function() {
 alert("You have joined the Coding Society! Learn at www.KhanAcademy.org,www.codeacademy.com,www.W3Schools.com,or scedule a study session with your local programmer!");
+
 
 }
 
@@ -39,12 +40,12 @@ The power of a wizard some may say<br>
 But you can say no and get better pay!</p>
 <br>
 	<h3 style = "color:blue"> Finding!</h3>
-	<p> There are lots of sites to learn coding from it's just a matter of finding them! For example you could go to <a href="https://KhanAcademy.org/"target"_blank">Khan Academy</a><br>
-or <a href="https://codeacademy.com/"target"_blank">Codeacademy!</a>
+	<p> There are lots of sites to learn coding from it's just a matter of finding them! For example you could go to <a href="https://KhanAcademy.org" target="_blank">Khan Academy</a><br>
+or <a href="https://codeacademy.com" target="_blank">Codeacademy!</a>
 
 
 	</p>
-<a href="http://www.w3schools.com/"target"_blank">To learn coding!</a>
+<a href="http://www.w3schools.com" target="_blank">To learn coding!</a>
 
 
 <p id="Random_Paragraph">Random Paragraph</p>
